--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,11 +96,15 @@ dependencies {
         exclude module: 'support-v4'
     }
 
+    // sardine webDAV
+    compile "com.github.lookfirst:sardine:5.7"
+
     compile "com.android.support:support-v4:$android_support_version"
     compile "com.android.support:appcompat-v7:$android_support_version"
     compile "com.android.support:cardview-v7:$android_support_version"
     compile "com.android.support:recyclerview-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
+
 
     androidTestCompile "com.android.support:support-annotations:$android_support_version"
 
